fixed a bug when user edit a link and made a error - the whole link moved down and wan't visible to user

--- a/src/components/CategoryLinky/CategoryLinky.scss
+++ b/src/components/CategoryLinky/CategoryLinky.scss
@@ -57,6 +57,14 @@
   }
 
   &-form-wrapper-expand {
-    height: 96px;
+    height: 24 * 4px;
+
+    &.link-form-errors-1 {
+      height: 24 * 5px;
+    }
+
+    &.link-form-errors-2 {
+      height: 24 * 6px;
+    }
   }
 }
